--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "chalk": "^0.5.1",
     "colors": "~0.6.2",
     "request": "~2.40.0",
-    "w3cjs": "~0.1.25"
+    "w3cjs": "^0.3.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
